@@ -232,45 +232,3 @@ DEF_SIMPLE_GM(colorfiltershader, canvas, 610, 610) {
         canvas->translate(0, 150);
     }
 }
-
-template <typename Maker> void do_mixershader(SkCanvas* canvas, Maker&& maker) {
-    auto shaderA = GetResourceAsImage("images/mandrill_128.png")->makeShader(SkSamplingOptions());
-    const SkColor colors[] = { SK_ColorGREEN, 0 };
-    auto shaderB = SkGradientShader::MakeRadial({60, 60}, 55, colors, nullptr, 2,
-                                                SkTileMode::kClamp,
-                                                SkGradientShader::kInterpolateColorsInPremul_Flag,
-                                                nullptr);
-    const SkBlendMode modes[] = {
-        SkBlendMode::kSrc, SkBlendMode::kModulate, SkBlendMode::kColorBurn, SkBlendMode::kPlus,
-        SkBlendMode::kDstATop,
-    };
-    SkPaint paint;
-    SkRect r = SkRect::MakeWH(120, 120);
-
-    canvas->translate(10, 10);
-    for (auto mode : modes) {
-        canvas->save();
-        const int count = 6;
-        for (int x = 0; x < count; ++x) {
-            const float t = x * 1.0f / (count - 1);
-            paint.setShader(maker(shaderA, shaderB, mode, t));
-            canvas->drawRect(r, paint);
-            canvas->translate(r.width() + 10, 0);
-        }
-        canvas->restore();
-        canvas->translate(0, r.height() + 20);
-    }
-}
-
-DEF_SIMPLE_GM(mixershader, canvas, 800, 700) {
-    do_mixershader(canvas, [](sk_sp<SkShader> a, sk_sp<SkShader> b, SkBlendMode mode, float t) {
-        auto sh = SkShaders::Blend(mode, a, b);
-        return SkShaders::Lerp(t, a, sh);
-    });
-}
-
-DEF_SIMPLE_GM(mixershader2, canvas, 800, 700) {
-    do_mixershader(canvas, [](sk_sp<SkShader> a, sk_sp<SkShader> b, SkBlendMode mode, float t) {
-        return SkShaders::Lerp(t, a, SkShaders::Blend(mode, a, b));
-    });
-}
